# TacWrite3

./: .env  .env.example  .gitignore  .replit  GROQ_INTEGRATION.md  _CARDINAL_ROOT.txt  package-lock.json  package.json  replit.md  test-groq-endpoint.html  test-groq.html  test-kimiki2.html  test-narrative-modes.html  test-provider-check.html  test-provider-switching.html  train-anti-auto-start.sh  train-response-flow.sh  train-wait-confirmation.sh  tsconfig.json
PRODUCTS_CLAUDE/: products_export_1 (4).csv  products_export_FIXED.csv
TACWRITEMAINLEVEL/: _CARDINAL_ROOT.txt
TACWRITEMAINLEVEL/cardinal-signposts/: CONTRIBUTING.md  LICENSE  QUICKSTART.md  README.md  _CARDINAL_CARDINAL-SIGNPOSTS.txt  pyproject.toml  setup.py
TACWRITEMAINLEVEL/cardinal-signposts/cardinal_signposts/: _CARDINAL_CARDINAL-SIGNPOSTS_CARDINAL_SIGNPOSTS.txt  __init__.py  cli.py  generator.py  validators.py
TACWRITEMAINLEVEL/cardinal-signposts/examples/: _CARDINAL_CARDINAL-SIGNPOSTS_EXAMPLES.txt
TACWRITEMAINLEVEL/cardinal-signposts/examples/python-webapp/: README.md  _CARDINAL_CARDINAL-SIGNPOSTS_EXAMPLES_PYTHON-WEBAPP.txt
TACWRITEMAINLEVEL/cardinal-signposts/tests/: _CARDINAL_CARDINAL-SIGNPOSTS_TESTS.txt  test_generator.py
attached_assets/: CLAUDE_1754740788190.md  README_1754740788192.md  _CARDINAL_ATTACHED_ASSETS.txt  agent_container_system_1754741081996.ts  autonomous-continuation.ts_1754741081999.old  contextual-enrichment.ts_1754741082000.old  contextual-enrichment_1754741081999.ts  refine-suggestion-flow_1754742940550.ts  repetition-checker-flow_1754742940552.ts  simple-generate-text-block_1754742536523.ts  socratic-tutor-flow_1754742940552.ts  update-knowledge-graph-flow_1754742940553.ts  wfa_agent_flow_1754742940553.ts  writing-tutor-flow.ts_1754742536523.old  writing-tutor-flow_1754742940554.ts
client/: _CARDINAL_CLIENT.txt  index.html
docs/: ai-assistant-panel-button-analysis.md  codebase-overview.md
flows/: _CARDINAL_FLOWS.txt  agent_orchestrator.ts  anti-averaging-system.ts  autonomous-continuation.ts  character-profile-flow.ts  community_memory_pool.ts  continue-text.ts  doctor_agent_flow.ts  end-chapter.ts  (+12 more)
(+79 files in other folders)
